Bug Fix on Safari

--- a/css/master.css
+++ b/css/master.css
@@ -71,6 +71,8 @@ header h1 {
   box-sizing: border-box;
   padding: 10px 0;
   height: 100%;
+  /*height: 100px;*/
+  position: absolute;
   width: 100%;
   background-color: transparent;
   justify-content: space-between;
@@ -88,10 +90,12 @@ header h1 {
 
 .color-choice:hover {
   box-shadow: 1px 1px 2px white, 0 0 50px lightyellow, 0 0 10px yellow;
+  -webkit-box-shadow: 1px 1px 2px white, 0 0 50px lightyellow, 0 0 10px yellow;
 }
 
 .color-choice-selected {
   box-shadow: 1px 1px 2px black, 0 0 50px lightyellow, 0 0 10px yellow;
+  -webkit-box-shadow: 1px 1px 2px white, 0 0 50px lightyellow, 0 0 10px yellow;
 }
 
 /*GRID*/
